2003-09-21  Bruno Haible  <bruno@clisp.org>

	* vasprintf.c (int_vasprintf): Assume ANSI C when copying a structure.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	Portability to SunOS 4.
	* atexit.c: New file, from gnulib with modifications.
	* Makefile.am (LIBADD_SOURCE): Add atexit.c.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* closeout.c: Include fwriteerror.h.
	(close_stdout_status): Use improved errno value from fwriteerror().
	Don't call fclose; it is be done implicitly during exit().

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* fwriteerror.h: New file.
	* fwriteerror.c: New file.
	* Makefile.am (libgettextlib_la_SOURCES): Add fwriteerror.h,
	fwriteerror.c.
	* Makefile.msvc (OBJECTS): Add fwriteerror.obj.
	(fwriteerror.obj): New rule.
	* Makefile.vms (OBJECTS): Add fwriteerror.obj.
	(fwriteerror.obj): New rule.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	* closeout.h: New file, from gnulib with modifications.
	* closeout.c: New file, from gnulib with modifications.
	* Makefile.am (libgettextlib_la_SOURCES): Add closeout.h, closeout.c.
	* Makefile.msvc (OBJECTS): Add closeout.obj.
	(closeout.obj): New rule.
	* Makefile.vms (OBJECTS): Add closeout.obj.
	(closeout.obj): New rule.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* progreloc.c (get_full_program_name): Define via prototype.

2003-08-28  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: Undefine O_BINARY before defining it. This avoids a
	warning on QNX, which defines O_BINARY to 000000.

2003-08-27  Bruno Haible  <bruno@clisp.org>

	* getopt.h: Include config.h. Needed for DLL_VARIABLE on OSF/1 4.0.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: Include <stdio.h>, to avoid a compilation error when
	MSVC7 <stdio.h> is included later.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* error.h: Use ANSI C "..." declarations when compiling with MSVC, even
	though it doesn't define __STDC__ by default.
	* error.c: Use <stdarg.h> when compiling with MSVC, even though it