@@ -48,6 +48,7 @@ OBJECTS = \
   error.obj, \
   error-progname.obj, \
   execute.obj, \
+  fatal-signal.obj, \
   findprog.obj, \
   fstrcmp.obj, \
   full-write.obj, \
@@ -123,6 +124,9 @@ error-progname.obj : error-progname.c
 
 execute.obj : execute.c
 	$(CC) $(INCLUDES) $(CFLAGS) /define=($(DEFS)) execute.c
+
+fatal-signal.obj : fatal-signal.c
+	$(CC) $(INCLUDES) $(CFLAGS) /define=($(DEFS)) fatal-signal.c
 
 findprog.obj : findprog.c
 	$(CC) $(INCLUDES) $(CFLAGS) /define=($(DEFS)) findprog.c
